--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huddlers",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "SDK interface with the Huddlers Nostr caching API",
   "author": "Yofti Milkessa",
   "scripts": {
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "rimraf": "^5.0.7",
     "ts-jest": "^29.1.5",
