--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huddlers",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "SDK interface with the Huddlers Nostr caching API",
   "author": "Yofti Milkessa",
   "scripts": {
@@ -11,7 +11,10 @@
     "prepublish": "npm run build",
     "clean": "rimraf dist"
   },
-  "keywords": [],
+  "keywords": [
+    "Huddlers",
+    "Nostr"
+  ],
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -21,9 +24,9 @@
     "ts-jest": "^29.1.5",
     "typescript": "^5.5.3"
   },
-  "types": "./dist/src/index.d.ts",
-  "main": "./dist/src/index.js",
-  "module": "./dist/src/index.js",
+  "types": "./dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "files": [
     "dist",
     "README.md",
